# taskly

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  render.yaml  start.sh  vercel.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
api/: index.py  requirements.txt
backend/: .env.example  database.py  main.py  pyproject.toml  requirements.txt  tags.py  vercel.json
backend/api/: index.py
backend/middleware/: auth.py
backend/migrations/: 001_create_schema_migrations.sql  002_create_users.sql  003_create_tasks.sql  004_add_user_status.sql  005_add_task_tag.sql
backend/routers/: admin.py  auth.py  meta.py  tasks.py
backend/services/: task_service.py  user_service.py
frontend/: .prettierrc  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/AddTaskForm/: AddTaskForm.jsx
frontend/src/components/AdminDashboard/: AdminCreateTaskForm.jsx  AdminDashboard.jsx  PendingUsers.jsx
frontend/src/components/Auth/: LoginForm.jsx  (+1 more)
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: useTasks.js
frontend/src/pages/: AdminPage.jsx  DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx
frontend/src/services/: api.js
frontend/src/utils/: tagColors.js
specs/001-task-tracker-multi-user/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-task-tracker-multi-user/checklists/: requirements.md
specs/001-task-tracker-multi-user/contracts/: api.md
(+4 files in other folders)
